2010-02-10  Jan Djärv  <jan.h.d@swipnet.se>

	* xsmfns.c (x_session_initialize): Move initialization of ice_fd and
	doing_interact here.
	(ice_connection_closed): New function.
	(x_session_check_input, smc_die_CB, ice_io_error_handler)
	(ice_conn_watch_CB, x_session_close): Call ice_connection_closed.
	(x_session_check_input): Call IceCloseConnection if IceProcessMessages
	returns I/O error.
	(ice_conn_watch_CB): Call add_keyboard_wait_descriptor on ice_fd,
	bug #5512.

2010-02-08  Francis Devereux  <francis@devrx.org>  (tiny change)

	* nsfont.m (nsfont_open): The system's value for the font descent
	is negative, so round it down to avoid clipping.

2010-02-06  Chong Yidong  <cyd@stupidchicken.com>

	* charset.c (load_charset_map_from_file)
	(load_charset_map_from_vector): Fix last change to use SAFE_ALLOCA
	instead of xmalloc (Bug#5526).  Suggested by Vivek Dasmohapatra.

2010-02-05  Chong Yidong  <cyd@stupidchicken.com>

	* charset.c (load_charset_map_from_file): Allocate large
	charset_map_entries structure on the heap rather than the stack.
	(Bug#5526).

2010-01-31  Kenichi Handa  <handa@m17n.org>

	* font.c (font_parse_xlfd): If FONT is a font-entity and pixel
	size in NAME is invalid, return -1 (Bug#5396).

2010-01-31  Chong Yidong  <cyd@stupidchicken.com>

	* nsterm.m (ns_defined_color): Block input.  Suggested by Mike
	<deactivated@gmail.com> (Bug#3605).

2010-01-31  David De La Harpe Golden  <david@harpegolden.net>

	* fileio.c (Frename_file): Correctly rename symlinks to
	directories (Bug#5496).

2010-01-31  Filipe Cabecinhas  <filcab@gmail.com>  (tiny change)

	* nsterm.m (ns_ring_bell): Handle visible bell like X.

2010-01-30  Andreas Schwab  <schwab@linux-m68k.org>

	* character.h (CHAR_PRINTABLE_P): Reparenthesize to avoid warning.

2010-01-29  Chong Yidong  <cyd@stupidchicken.com>

	* frame.c (DEFAULT_ROWS): Change default to 35.

	* xfns.c (x_default_font_parameter): Change default XFT font to
	monospace-10 (Bug#3643).
